Improved object value wrapper with validation against a list of strings.